--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 
 .footer {
-  position: fixed;
+  /* position: fixed; */
+  margin-top: 48px;
   bottom: 0;
   padding: 32px 0;
   text-align: center;
@@ -32,12 +33,14 @@
 }
 .main {
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  flex-wrap: wrap;
   margin-top: 16px;
 }
 .item {
   background-color: #eeeeee;
   width: 30%;
+  margin: 10px 25px;
   padding: 8px 16px;
   display: flex;
   flex-direction: column;
