add template zingmp3

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
   color: #fff;
 }
 .header {
-  padding: 32px 0;
+  padding: 26px 0;
   text-align: center;
   background-color: #ccff99;
 }
@@ -30,6 +30,12 @@
   font-size: 40px;
   color: #ff00ff;
   letter-spacing: 4px;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .main {
   display: flex;
@@ -70,4 +76,31 @@
   font-weight: 600;
   text-decoration: none;
   text-align: center;
+}
+
+.footer__list {
+  font-size: 16px;
+  margin-top: 8px;
+}
+
+/* Pagination links */
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+.pagination {
+  margin-top: 16px;
+}
+/* Style the active/current link */
+.pagination a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+/* Add a grey background color on mouse-over */
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
 }
